chore: fix Sonar linting issues